--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xdg" %}
-{% set version = "3.0.2" %}
-{% set sha256 = "7ce9fc52cee0f8e31d0beb0f29e102f23725c0c470aee447d907e1999ffda7b7" %}
+{% set version = "1.0.5" %}
+{% set sha256 = "d495c8c620a6a34b6111f3254d6fab5f06c1a7ce532e8f34e029209a19e6ce65" %}
 
 package:
   name: {{ name|lower }}
@@ -12,17 +12,17 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 1000
+  number: 1
   script: python -m pip install --no-deps --ignore-installed .
   skip: True  # [win]
 
 requirements:
   build:
-    - python >=3.6
+    - python
     - pip
     - pytest-runner
   run:
-    - python >=3.6
+    - python
 
 test:
   imports:
